--- a/samples/css/css/gradients.css
+++ b/samples/css/css/gradients.css
@@ -1,22 +1,22 @@
 
 div {
-    margin: 2em;
-    padding: 2em;
+    margin: 10px;
+    padding: 5px;
 }
-.linear-gray {
-    background: linear-gradient(90deg, #ccc 0%, 
-    #121212 50%,#ffffff 100%);
+
+.linear {
+    background: linear-gradient(85deg, #bbb 0%, #323232 60%, #f0f0f0 100%);
 }
 
 .radial {
-background: radial-gradient(center, ellipse cover, orange 72%,
-red 100%);
+background: radial-gradient(center, ellipse cover, yellow 72%,
+lime 100%);
 }
 
 article {
-background: radial-gradient(20px 20px, circle cover,gray 0%,
-pink 50%,
-red 51%,
-orange 75%,
-brown 100%);
+background: radial-gradient(30px 30px, circle cover, black 0%,
+    #ccc 49%,
+    pink 50%,
+    red 78%,
+    orange 100%);
 }
