--- a/samples/css/css/animations.css
+++ b/samples/css/css/animations.css
@@ -1,31 +1,4 @@
-@keyframes yellowgrow {
-    from {
-        font-size: 10pt;
-        color: black;
-    }
-    25% {
-        font-size: 15pt;
-        color: yellow;
-    }
-    50% {
-        font-size: 10pt;
-        color: green;
-    }
-    75% {
-        font-size: 15pt;
-        color: blue;
-    }
-    to {
-        font-size: 10pt;
-        color: black;
-    }
-}
-
-.flashy:hover {
-    animation: yellowgrow 2.5s infinite ease-in;
-}
-
-@keyframes batlogo {
+@keyframes mylogoanimation {
     from {
         transform: rotate(45deg);
     }
@@ -39,7 +12,7 @@
     }
     75% {
 
-        transform: rotate(240deg);
+        transform: rotate(270deg);
     }
     to {
 
@@ -52,13 +25,38 @@
 }
 
 article div {
-    width: 200px;
-    margin: 0 auto;    
+    width: 300px;
+    margin: 0 auto;
 }
 
 article:hover .logo {
     display: block;
-    animation: batlogo 1s infinite ease-in;
-} 
+    animation: mylogoanimation 2s infinite ease-in;
+}
 
+@keyframes growupanimation {
+    from {
+        font-size: 10pt;
+        color: black;
+    }
+    25% {
+        font-size: 15pt;
+        color: yellow;
+    }
+    50% {
+        font-size: 10pt;
+        color: orange;
+    }
+    75% {
+        font-size: 15pt;
+        color: red;
+    }
+    to {
+        font-size: 10pt;
+        color: purple;
+    }
+}
 
+.colored:hover {
+    animation: growupanimation 2.5s infinite ease-in;
+}
