--- a/samples/css/css/hslcolor.css
+++ b/samples/css/css/hslcolor.css
@@ -1,21 +1,21 @@
 body {
-    margin: 2em;
-    background-color: hsl(200,100%,100%);
-    background-image: url('../images/background.png');
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-position: center;
+    background-color: hsl(150, 100%, 100%);
+    background-image: url('../images/backgroundlogos.png');
+  	background-attachment: fixed;
+  	background-repeat: no-repeat;
+  	background-position: center;
+    margin: 1em;
 }
 
 .title {
-    color: hsl(20,100%, 60%);
+    color: hsl(30, 100%, 60%);
     text-align: center;
     font-weight: bold;
 }
 
 .manifesto {
-    padding: 4em;
-    margin: 2em;
-    background-color: hsla(190,10%, 30%,0.8);
-    color: hsl(200,60%,90%);
+    margin: 4px;
+    padding: 20px;
+    background-color: hsla(175, 20%, 35%, 0.75);
+    color: hsl(200, 55%, 80%);
 }
