--- a/samples/css/css/multipleback.css
+++ b/samples/css/css/multipleback.css
@@ -1,25 +1,25 @@
 .manifesto {
-    padding: 4em;
-    margin: 2em;
-    background-color: rgba(20,20,20,0.80);
-    color: rgb(200,200,200);
+    background-color: rgba(35, 35, 35, 0.70);
+    color: rgb(180, 180, 180);
+    padding: 10px;
+    margin: 4px;
 }
 
 .manifesto h2 {
-    font-style: normal;
-    font-size: 2em;
+    font-size: 16pt;
+    font-weight: bold;
     text-align: center;
 }
 
 main {
-    font-size: 10pt;
+    font-size: 1.2em;
     font-style: italic;
-    background: url(../images/html5.png) left no-repeat, 
-                url(../images/css3.png) center no-repeat,
-                url(../images/js.png) right no-repeat;
+    background: url(../images/grunt-logo.png) left no-repeat,
+                url(../images/git-logo.png) center no-repeat,
+                url(../images/css3-logo.png) right no-repeat;
 }
 
 footer {
     background-color: #313131;
-    color: beige;
+    color: #330044;
 }
