--- a/samples/css/css/rgbtransparency.css
+++ b/samples/css/css/rgbtransparency.css
@@ -1,20 +1,20 @@
 body {
-    margin: 2em;
     background-color: white;
-    background-image: url('../images/background.png');
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-position: center;
+    background-image: url('../images/backgroundlogos.png');
+  	background-attachment: fixed;
+  	background-repeat: no-repeat;
+  	background-position: center;
 }
 
 .title {
+    font-size: 3em;
     text-align: center;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .manifesto {
-    padding: 4em;
-    margin: 2em;
-    background-color: rgba(20,20,20,0.80);
-    color: rgb(200,200,200);
+    margin: 1em;
+    padding: 2em;
+    color: rgb(210, 210, 210);
+    background-color: rgba(33, 33, 33, 0.7);
 }
